# dartRack_upper

./: .gitignore  CMakeLists.txt  Info.plist  README.md  cmake_pack_macos.cmake  dartRack_upper.pro  main.cpp  main.h  pic.qrc
0.5testDartByTS/: testdart.cpp  testdart.ui  testdartcomputing.cpp  testdartcomputing.ui
05testDartByTS/: CMakeLists.txt  testdartbyts.cpp  testdartbyts.h  testdartbyts.ui  testdartcomputingbyts.cpp  testdartcomputingbyts.h  testdartcomputingbyts.ui
0testDart/: CMakeLists.txt  testdart.cpp  testdart.h  testdart.ui  testdartcomputing.cpp  testdartcomputing.h  testdartcomputing.ui
1serialConnect/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
2yawAiming/: CMakeLists.txt  yawaiming.cpp  yawaiming.h  yawaiming.ui
3.5dartsParasCompByTS/: dartsparascomputing.ui
35dartsParasCompByTS/: CMakeLists.txt  dartsparascomputing.cpp  dartsparascomputing.h  dartsparascomputingbyts.cpp  dartsparascomputingbyts.h  dartsparascomputingbyts.ui
3dartsParasComp/: CMakeLists.txt  dartsparascomputing.cpp  dartsparascomputing.h  dartsparascomputing.ui
dartRack_upper/: dartRack_upper
myComboxBox/: CMakeLists.txt  MyComboxBox.cpp  MyComboxBox.h
serial/: CMakeLists.txt  serial.cpp  serial.h
